[tool.poetry]
name = "asgd"
version = "0.1.0"
description = "ASG Deployer. CLI tool to manage deploying new instances into AWS Autoscaling Groups."
authors = ["Ayaz Abbas <lfcayaz@gmail.com>"]
license = "MIT License"

[tool.poetry.scripts]
asgd = "asgd.cli:app"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
typer = "^0.4.0"
boto3 = "^1.21.27"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
